<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="134dp"
        android:layout_y="350dp"
        android:text="@string/btn_submit" />

    <EditText
        android:id="@+id/et_phonenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="59dp"
        android:layout_y="59dp"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_smscontent"
        android:layout_width="wrap_content"
        android:layout_height="114dp"
        android:layout_x="60dp"
        android:layout_y="215dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_phonenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="48dp"
        android:layout_y="22dp"
        android:text="@string/tv_phonenum"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_smscontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="70dp"
        android:layout_y="122dp"
        android:text="@string/tv_smscontent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</AbsoluteLayout>
